--- a/development-challenge-two/package.json
+++ b/development-challenge-two/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.12",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
